objects/TT_Template_Questions__c/TT_Template_Questions__c.object-meta.xml
<CustomObject>
    <description>Store all the questions related to the Campaign template</description>
    <label>TT Template Questions</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TT Template Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>