objects/TT_Template_Questions__c/validationRules/Disable_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() = FALSE</errorConditionFormula>
    <errorMessage>Questions Cannot Be Edited.</errorMessage>
</ValidationRule>