objects/TT_Template_Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>